# chaff

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: ci.yml  release.yml  test-action.yml
demo/: demo.tape  setup.sh
docs/: DESIGN.md
src/: caches.rs  clean.rs  config.rs  gitinfo.rs  main.rs  model.rs  report.rs  rules.rs  scan.rs  size.rs  tui.rs  util.rs
