[package]
name = "chaff"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Safe, smart dev-disk reclaimer — winnow build & dependency junk from your projects"
license = "MIT"
readme = "README.md"
# repository = "https://github.com/<you>/chaff"   # fill in after you create the repo
keywords = ["cli", "tui", "disk", "cleanup", "node_modules"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"           # recursive directory walk (size + discovery)
rayon = "1"             # parallel directory size calculation
trash = "5"             # safe delete (send to OS trash, recoverable)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
humansize = "2"         # human-readable byte sizes
ratatui = "0.29"        # interactive TUI
crossterm = "0.28"      # terminal backend for ratatui

[profile.release]
lto = true
strip = true
codegen-units = 1
