[package]
name = "chaff"
version = "0.5.0"
edition = "2021"
rust-version = "1.74"
description = "Safe, smart dev-disk reclaimer — winnow build & dependency junk from your projects"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Leartt1/chaff"
keywords = ["cli", "tui", "disk", "cleanup", "node_modules"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["demo/", "docs/", ".github/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"           # recursive directory walk (size + discovery)
rayon = "1"             # parallel directory size calculation
trash = "5"             # safe delete (send to OS trash, recoverable)
humansize = "2"         # human-readable byte sizes
serde = { version = "1", features = ["derive"] }   # config parsing
toml = "0.8"            # config.toml
globset = "0.4"         # .chaffignore glob matching
serde_json = "1"        # --json output
ratatui = "0.29"        # interactive TUI
crossterm = "0.28"      # terminal backend for ratatui

[profile.release]
lto = true
strip = true
codegen-units = 1
